--- a/views/register.html
+++ b/views/register.html
@@ -72,7 +72,7 @@
             <input type="password" name="clave" class="campo" required> 
             <h3> Repetí tu contraseña </h3>
             <input type="password" name="clave" class="campo" required> 
-          <button  class="boton"> <a href="/" style="text-decoration: none"> Enviar</button></a> 
+          <button  class="boton"> <a href="./" style="text-decoration: none"> Enviar</button></a> 
           <button type="reset" class="resetear">Resetear formulario</button> 
       </form>
       </div>
