--- a/views/login.html
+++ b/views/login.html
@@ -40,7 +40,7 @@
             <input type="text" name="usuario"  placeholder="Nombre de usuario" class="campo">
             <input type="email" name="email" placeholder="Email" class="campo"> 
           </div>
-          <button  class="boton"> <a href="/" style="text-decoration: none"> Enviar</button></a> 
+          <button  class="boton"> <a href="./" style="text-decoration: none"> Enviar</button></a> 
           <button  class="crear-cuenta"> <a href="/register" style="text-decoration: none">Crear cuenta</button> </a> 
       </form>
       </div>
