--- a/public/editar.css
+++ b/public/editar.css
@@ -71,7 +71,7 @@
     justify-content: center;
     border-radius: 4px;
     padding: 22px;
-    margin-top: -20px;
+    margin-top: -1%;
     
  
   
